# recap

./: .gitignore  DEVELOPER.md  Dockerfile  LICENSE  README.md  RELEASE.md  SPEC.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
docs/: analyzers.md  browsers.md  catalogs.md  cli.md  commands.md  configuration.md  crawler.md  index.md  plugins.md  quickstart.md  rest.md  server.md
docs/api/: recap.analyzers.md  recap.browsers.md  recap.catalog.md  recap.catalogs.md  recap.crawler.md  recap.integrations.md  recap.metadata.md  recap.paths.md  recap.repl.md  recap.schema.md  recap.storage.md
docs/api-ref/: recap.routers.md
docs/guides/: configuration.md  logging.md  plugins.md
java/: .gitignore  pom.xml
java/recap-core/: pom.xml
java/recap-kafka/: pom.xml
python/: .gitignore  pyproject.toml
python/recap/: __init__.py  logging.py  models.py  types.py
python/recap/catalog/: server.py  storage.py
python/recap/converters/: bigquery.py  proto.py  recap.py  sqlglot.py
python/recap/readers/: sqlalchemy.py
python/tests/: test_types.py
python/tests/converters/: test_avro.py
recap/: __init__.py  api.py  catalog.py  cli.py  commands.py  config.py  crawler.py  differ.py  gateway.py  logging.py  metadata.py  models.py  paths.py  plugins.py  registry.py  repl.py  search.py  server.py  settings.py  storage.py  types.py  typing.py  url.py
recap/analyzers/: __init__.py  abstract.py  db.py  table.py
recap/analyzers/bigquery/: access.py  job_counts.py  latest_queries.py
recap/analyzers/db/: abstract.py  access.py  column.py  comment.py  foreign_key.py  index.py  location.py  primary_key.py  profile.py  view_definition.py
recap/analyzers/duckdb/: columns.py
recap/analyzers/frictionless/: columns.py
recap/analyzers/genson/: columns.py
recap/analyzers/pandas/: profile.py
recap/analyzers/sqlalchemy/: access.py  columns.py  comment.py  foreign_keys.py  indexes.py  primary_key.py  profile.py  view_definition.py
recap/browsers/: __init__.py  abstract.py  analyzing.py  db.py  fs.py
recap/catalog/: __init__.py  abstract.py  client.py  crawler.py  duckdb.py  fs.py  recap.py  server.py
recap/catalogs/: __init__.py  abstract.py  db.py  recap.py
recap/clients/: __init__.py  bigquery.py  confluent_registry.py  dbapi.py  fs.py  hive_metastore.py  mysql.py  postgresql.py  snowflake.py  sqlite.py
recap/commands/: analyze.py  browse.py  catalog.py  crawl.py  live.py  plugins.py  serve.py
recap/converters/: __init__.py  avro.py  bigquery.py  converter.py  dbapi.py  frictionless.py  hive_metastore.py  json_schema.py  mysql.py  postgresql.py  protobuf.py  recap.py  snowflake.py  sqlalchemy.py  sqlite.py
recap/crawler/: __init__.py  db.py
recap/crawlers/: __init__.py  abstract.py  db.py
recap/crawlers/db/: __init__.py  analyzers.py  browser.py  crawler.py
recap/gateway/: app.py
recap/hms/: ThriftHiveMetastore-remote  hive_metastore.thrift  hms.py
recap/hms/hive_metastore/: ThriftHiveMetastore.py
recap/integrations/: __init__.py  bigquery.py  fsspec.py  sqlalchemy.py
recap/plugins/: __init__.py
recap/plugins/analyzers/: abstract.py  table.py
recap/plugins/browsers/: abstract.py  db.py
recap/plugins/catalogs/: __init__.py  abstract.py  db.py  duckdb.py  fs.py  recap.py
recap/plugins/commands/: catalog.py  crawl.py  plugins.py  serve.py
recap/readers/: bigquery.py  confluent_registry.py  dbapi.py  fsspec.py  hive_metastore.py  mysql.py  postgresql.py  readers.py  snowflake.py  sqlalchemy.py
recap/readers/hive/: metastore.py
recap/routers/: catalog.py  db.py  directory.py  metadata.py  recap.py  search.py
recap/routers/catalog/: typed.py  untyped.py
recap/schema/: __init__.py  avro.py  bigquery.py  diff.py  frictionless.py  json_schema.py  model.py  models.py  parser.py  sqlalchemy.py  sqlglot.py  types.py  types2.py
recap/schema/converters/: __init__.py  avro.py  bigquery.py  converter.py  frictionless.py  json_schema.py  pandera.py  proto.py  recap.py  sdl.py  sqlalchemy.py  sqlglot.py
recap/schemas/: schema.py
recap/search/: __init__.py  abstract.py  duckdb.py  jq.py  recap.py
recap/server/: app.py  gateway.py  registry.py
recap/storage/: __init__.py  abstract.py  db.py  fs.py  notifier.py  recap.py  registry.py  remote.py
tests/: 0.2.0.json  docker-compose.yml  test_types.py
tests/catalog/: test_db.py
tests/catalogs/: test_db.py
tests/converters/: test_avro.py  test_json_schema.py  test_proto.py  test_protobuf.py
tests/integration/: test_cli.py  test_gateway.py
tests/integration/clients/: test_bigquery.py  test_confluent_registry.py  test_fs.py  test_hive_metastore.py  test_mysql.py  test_postgresql.py
tests/integration/readers/: test_bigquery.py  test_confluent_registry.py  test_hive_metastore.py  test_mysql.py  test_postgresql.py
tests/integration/server/: test_gateway.py
tests/readers/: test_confluent_registry.py  test_postgresql.py  test_snowflake.py  test_sqlalchemy.py
tests/schema/: test_types.py
tests/schema/converters/: test_avro.py  test_json_schema.py  test_pandera.py  test_proto.py  test_sdl.py
tests/spec/: alias_on_alias_reference.invalid.json  alias_referencing_field.json  alias_referencing_field.unimplemented.invalid.json  bytes_field.json  enum_field.json  float_field copy.json  float_field.json  int_field.json  invalid_field_type.json  list_field.json  list_field_fixed_no_length.unimplemented.invalid.json  map_field.json  null_field.json  string_field.json  struct_field.json  test_json_schema.py  test_json_schema_spec.py  union_field.json
tests/spec/invalid/: alias_on_alias_reference.json  alias_pointing-nowhere.unimplemented.json  alias_pointing_nowhere.json  bad_logical_types.json  fixed_no_length.json  illegal_lengths.json  non_fqn_alias.json  unknown_field_type.json
tests/spec/valid/: alias_referencing_field.json  bytes_field.json  date_logical_field.json  decimal_logical_field.json  enum_field.json  float_field.json  int_field.json  list_field.json  (+6 more)
tests/storage/: test_db.py
tests/unit/: test_cli.py  test_gateway.py  test_settings.py  test_types.py
(+28 files in other folders)
