[project]
name = "recap-core"
version = "0.5.3"
description = "A metadata toolkit written in Python"
authors = [
    {name = "Chris Riccomini", email = "criccomini@apache.org"},
]
dependencies = [
]
# <= 3.11 for python-bigquery
requires-python = ">=3.10, <=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "metadata",
    "data",
    "data catalog",
    "data engineering",
    "data infrastructure",
    "infrastructure",
    "devtools",
    "devops",
]

[project.urls]
documentation = "https://recap.build"
homepage = "https://recap.build"
repository = "https://github.com/recap-cloud/recap"

[project.optional-dependencies]
kafka = [
    "confluent-kafka[schema-registry]>=2.1.1",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
tests = [
    "pytest>=7.2.1",
    # For snowflake
    "snowflake-connector-python>=3.0.4",
    "fakesnow>=0.1.0",
    # For fakesnow
    # For postgres
    "psycopg2-binary>=2.9.6",
]
style = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "pylint>=2.16.1",
    "pyright>=1.1.293",
]

[tool.isort]
profile = "black"
case_sensitive = true

[tool.pylint.messages_control]
max-line-length = 110

[tool.pyright]
include = ["recap/"]
pythonPlatform = "All"
exclude = [
    "**/__pycache__",
]

[tool.pdm.scripts]
black = "black recap/ tests/"
isort = "isort recap/ tests/"
style = {composite = ["black", "isort"]}
