[project]
name = "recap-core"
version = "0.6.1"
description = "Read schemas from web service, databases, and schema registries in a standard format"
authors = [
    {name = "Chris Riccomini", email = "criccomini@apache.org"},
]
dependencies = [
]
# <= 3.11 for python-bigquery
requires-python = ">=3.10, <=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "avro",
    "data",
    "data catalog",
    "data discovery",
    "data engineering",
    "data governance",
    "data infrastructure",
    "data integration",
    "data pipelines",
    "data quality",
    "devops",
    "devtools",
    "etl",
    "infrastructure",
    "json schema",
    "metadata",
    "protobuf",
]

[project.urls]
documentation = "https://recap.build"
homepage = "https://recap.build"
repository = "https://github.com/recap-cloud/recap"

[project.optional-dependencies]
kafka = [
    "confluent-kafka[schema-registry]>=2.1.1",
]
proto = [
    "proto-schema-parser>=0.2.0",
]
hive = [
    "pymetastore>=0.2.0",
]
bigquery = [
    "google-cloud-bigquery>=3.11.3",
]
json = [
    "referencing>=0.30.0",
    "httpx>=0.24.1",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
tests = [
    "pytest>=7.2.1",
    # For snowflake
    "snowflake-connector-python>=3.0.4",
    "fakesnow>=0.5.1",
    # For postgres
    "psycopg2-binary>=2.9.6",
    "jsonschema>=4.18.4",
]
style = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "pylint>=2.16.1",
    "pyright>=1.1.293",
]

[tool.isort]
profile = "black"
case_sensitive = true

[tool.pylint.messages_control]
max-line-length = 110

[tool.pyright]
include = ["recap/"]
pythonPlatform = "All"
exclude = [
    "**/__pycache__",
]

[tool.pdm.scripts]
black = "black recap/ tests/"
isort = "isort recap/ tests/"
style = {composite = ["black", "isort"]}
